[tool.poetry]
name = "geoservercloud"
version = "0.0.0"
description = "Lightweight Python client to interact with GeoServer Cloud REST API, GeoServer ACL and OGC services"
authors = ["Camptocamp <info@camptocamp.com>"]
license = "BSD-2-Clause"
readme = "README.md"
packages = [{ include = "geoservercloud" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "2.32.5"
OWSLib = "0.34.1"
xmltodict = "0.14.2"
types-requests = "2.32.4.20250913"
types-xmltodict = "1.0.1.20250920"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
responses = "0.25.8"
coverage = "7.10.7"
sphinx = "8.1.3"
sphinx-rtd-theme = "3.0.2"

[build-system]
requires = [
  "poetry-core>=1.0.0",
  "poetry-dynamic-versioning[plugin]",
  "poetry-plugin-tweak-dependencies-version",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
copy-workspace = "geoservercloud.geoservercloudsync:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""
fix-shallow-repository = true

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[tool.bandit]
exclude_dirs = ["tests"]
